[fix/api/service-display-name] Added accountName to service data
